tests/compilefail10.out
[1mtests/compilefail10.pas:7:8: [0m[1m[91merror:[0m Semicolon expected
     7 | 	j:=7